force-app/main/default/objects/smagicinteract__Outbound_Configuration__mdt/smagicinteract__Outbound_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>It will store the message outbound configurations.</description>
    <label>Outbound Configuration</label>
    <pluralLabel>Outbound Configurations</pluralLabel>
</CustomObject>