force-app/main/default/objects/smagicinteract__Outbound_Configuration__mdt/fields/smagicinteract__Interface_Category__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Interface_Category__c</fullName>
    <label>Interface Category</label>
    <referenceTo>smagicinteract__Interface_Category__mdt</referenceTo>
    <relationshipLabel>Outbound Configurations</relationshipLabel>
    <relationshipName>Outbound_Configurations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>