force-app/main/default/objects/smagicinteract__Outbound_Configuration__mdt/fields/smagicinteract__New_Interface_Category__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__New_Interface_Category__c</fullName>
    <label>New Interface Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>