force-app/main/default/objects/smagicinteract__Outbound_Configuration__mdt/fields/smagicinteract__Not_Available__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Not_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Available</label>
    <type>Checkbox</type>
</CustomField>