force-app/main/default/objects/smagicinteract__Outbound_Configuration__mdt/fields/smagicinteract__Routing_Rule__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Routing_Rule__c</fullName>
    <description>This field will be lookup to &apos;Routing Rule&apos; object</description>
    <inlineHelpText>This field will be lookup to &apos;Routing Rule&apos; object</inlineHelpText>
    <label>Routing Rule</label>
    <referenceTo>smagicinteract__Routing_Rule__mdt</referenceTo>
    <relationshipLabel>Outbound Configurations</relationshipLabel>
    <relationshipName>Outbound_Configurations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>