force-app/main/default/objects/smagicinteract__Outbound_Configuration__mdt/fields/smagicinteract__Sender_Id_Advance_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Sender_Id_Advance_Type__c</fullName>
    <label>Sender Id Advance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SenderIdFromSObjectField</fullName>
                <label>Sender ID from Object Field</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>