force-app/main/default/objects/smagicinteract__Outbound_Configuration__mdt/fields/smagicinteract__Sender_Id_Basic_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Sender_Id_Basic_Type__c</fullName>
    <label>Sender Id Basic Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DefaultSenderId</fullName>
                <label>Default Sender ID</label>
            </value>
            <value>
                <fullName>RecordOwnerSenderId</fullName>
                <label>Record Owner&apos;s Sender ID</label>
            </value>
            <value>
                <fullName>LastSenderSenderId</fullName>
                <label>Last Sender&apos;s Sender ID</label>
            </value>
            <value>
                <fullName>ProfileSenderId</fullName>
                <label>Profile Sender ID</label>
            </value>
            <value>
                <fullName>SpecificSenderId</fullName>
                <label>Specific Sender ID</label>
            </value>
            <value>
                <fullName>AllSenderId</fullName>
                <label>All Sender Id</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>