force-app/main/default/objects/smagicinteract__Outbound_Configuration__mdt/fields/smagicinteract__Sender_JSON_Detail__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Sender_JSON_Detail__c</fullName>
    <description>It will store JSON of specific sender Id from user or queue.</description>
    <inlineHelpText>It will store JSON of specific sender Id from user or queue.</inlineHelpText>
    <label>Sender JSON Detail</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>